<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lv.mama.lvv.mine.view.RegisterActivity">

    <EditText
        android:id="@+id/re_Username"
        android:hint="@string/re_Username"
        android:layout_marginTop="80dp"
        style="@style/App_Register"
        />
    <EditText
        android:id="@+id/re_PassWord"
        android:hint="@string/re_PassWord"
        android:layout_marginTop="30dp"
        style="@style/App_Register"
        />
    <EditText
        android:id="@+id/re_PassWord2"
        android:hint="@string/re_PassWord2"
        android:layout_marginTop="30dp"
        style="@style/App_Register"
        />
    <EditText
        android:id="@+id/re_email"
        android:hint="@string/re_email"
        android:layout_marginTop="30dp"
        style="@style/App_Register"
        />

    <Button
        android:id="@+id/re_btn"
        style="@style/App_Register"
        android:layout_width="100dp"
        android:background="@color/orange"
        android:text="@string/re_btn"
        android:textColor="@color/white" />


</LinearLayout>
