<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/f4top"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/main"
        >
        <ImageView
            android:id="@+id/Head_portrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_default_user_head"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            />
        <RadioGroup
            android:id="@+id/f4d"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:background="@color/mainAdd"
            android:layout_alignParentBottom="true"
            android:paddingTop="15dp"
            >
            <RadioButton
                android:id="@+id/f4a"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_collection_goods"
                android:text="@string/app_a"
                android:textColor="@color/white"
                />
            <RadioButton
                android:id="@+id/f4b"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_collection_store"
                android:text="@string/app_b"
                android:textColor="@color/white"
                />
            <RadioButton
                android:id="@+id/f4c"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_footprint"
                android:text="@string/app_c"
                android:textColor="@color/white"
                />
        </RadioGroup>
        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_login"
            android:layout_above="@id/f4d"
            android:layout_below="@id/Head_portrait"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/dingDan"
        style="@style/AppF4d_layout"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/dingTu"
            style="@style/AppF4d_img"
            android:src="@mipmap/ic_user_order"
            />
        <TextView
            android:id="@+id/dingZi"
            style="@style/AppF4d_zi"
            android:layout_toRightOf="@id/dingTu"
            android:text="@string/app_FullOrder"
            />
    </RelativeLayout>

    <RelativeLayout style="@style/AppF4d_layouts">

        <RadioGroup
            android:id="@+id/f4ding"
            style="@style/AppF4d_Xyy">

            <RadioButton
                android:id="@+id/f4ad"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_order_wait_pay"
                android:text="@string/app_Fk"
                android:textColor="@color/nav" />

            <RadioButton
                android:id="@+id/f4bd"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_order_wait_pay"
                android:text="@string/app_Fh"
                android:textColor="@color/nav" />

            <RadioButton
                android:id="@+id/f4cd"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_order_wait_receipt"
                android:text="@string/app_Sh"
                android:textColor="@color/nav" />

            <RadioButton
                android:id="@+id/f4Ed"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_order_wait_comment"
                android:text="@string/app_Pj"
                android:textColor="@color/nav" />
            <RadioButton
                android:id="@+id/f4dd"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_order_wait_refund"
                android:text="@string/app_Pj"
                android:textColor="@color/nav" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/caiChan"
        style="@style/AppF4d_layout"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/caiTu"
            style="@style/AppF4d_img"
            android:src="@mipmap/ic_user_address"
            />
        <TextView
            android:id="@+id/caiZi"
            style="@style/AppF4d_zi"
            android:layout_toRightOf="@id/caiTu"
            android:text="@string/app_MyProperty"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>
    <RelativeLayout
        style="@style/AppF4d_layouts"
        >
        <RadioGroup
            android:id="@+id/f4cai"
            style="@style/AppF4d_Xyy"
            >
            <RadioButton
                android:id="@+id/f4ac"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_property_money"
                android:text="@string/app_fK"
                android:textColor="@color/nav"
                />
            <RadioButton
                android:id="@+id/f4bc"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_property_card"
                android:text="@string/app_cZ"
                android:textColor="@color/nav"
                />
            <RadioButton
                android:id="@+id/f4cc"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_property_vouchers"
                android:text="@string/app_dJ"
                android:textColor="@color/nav"
                />
            <RadioButton
                android:id="@+id/f4dc"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_property_red"
                android:text="@string/app_hB"
                android:textColor="@color/nav"
                />
            <RadioButton
                android:id="@+id/f4Ec"
                style="@style/AppF4"
                android:drawableTop="@mipmap/ic_user_property_integral"
                android:text="@string/app_hB"
                android:textColor="@color/nav"
                />
        </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/diZhi"
        style="@style/AppF4d_layout"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/diTu"
            style="@style/AppF4d_img"
            android:src="@mipmap/ic_user_address"
            />
        <TextView
            android:id="@+id/diZi"
            style="@style/AppF4d_zi"
            android:layout_toRightOf="@id/diTu"
            android:text="@string/app_Address"
            />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/sheZhi"
        style="@style/AppF4d_layout"
        >
        <ImageView
            android:id="@+id/sheTu"
            style="@style/AppF4d_img"
            android:src="@mipmap/ic_user_setting"
            />
        <TextView
            android:id="@+id/sheZi"
            style="@style/AppF4d_zi"
            android:layout_toRightOf="@id/sheTu"
            android:text="@string/app_Settings"
            />
    </RelativeLayout>

</LinearLayout>
